--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,12 @@
     ></script>
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy9VjU48jGk5M4b3F4pHPv5xqI2XX/0yE3zXrNI"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy9VjU
+    48jGk5M4b3F4pHPv5xqI2XX/0yE3zXrNI"
       crossorigin="anonymous"
     ></script>
-  </body>
+    <!-- This is where the React app will be injected -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>  </body>
 </html>
